--- a/index.html
+++ b/index.html
@@ -313,45 +313,45 @@
         <section class="clients">
             <div class="container">
                 <h2 class="clients__title">Постоянные клиенты</h2>
-                <ul class="clients-list">
-                    <li class="clients-list__item">
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="44.27" height="49.23">
+                <ul class="clients__list">
+                    <li class="clients__item">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="44.27" height="49.23">
                                 <use href="./images/icons/symbol-defs.svg#logo1"></use> 
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-list__item">
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="40" height="52">
+                    <li class="clients__item">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="40" height="52">
                                 <use href="./images/icons/symbol-defs.svg#logo2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-list__item">
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="41" height="42.6">
+                    <li class="clients__item">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="41" height="42.6">
                                 <use href="./images/icons/symbol-defs.svg#logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-list__item">
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="79.66" height="42.02">
+                    <li class="clients__item">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="79.66" height="42.02">
                                 <use href="./images/icons/symbol-defs.svg#logo4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-list__item">
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="59" height="47">
+                    <li class="clients__item">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="59" height="47">
                                 <use href="./images/icons/symbol-defs.svg#logo5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-list__item" >
-                        <a class="clients-list__link" href="#">
-                            <svg class="clients-list__logo" width="88.48" height="45.44">
+                    <li class="clients__item" >
+                        <a class="clients__link" href="#">
+                            <svg class="clients__logo" width="88.48" height="45.44">
                                 <use href="./images/icons/symbol-defs.svg#logo6"></use>
                             </svg>
                         </a>
