hero need to finish

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,16 @@
             <nav class="navigation">
                 <a class="logo" href="./index.html">Web<span class="logo__studio">Studio</span></a>
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a class="navigation__link" href="./index.html">Студия</a></li>
-                    <li class="navigation__item navigation__link--current"><a class="navigation__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="navigation__item"><a class="navigation__link"
+                            href="./index.html">Студия</a></li>
+                    <li class="navigation__item"><a class="navigation__link navigation__link--current" href="./portfolio.html">Портфолио</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-contacts">
                 <li class="header-contacts__item">
                     <a class="header-contacts__link" href="mailto:info@devstudio.com">
-                        <svg class="header-contacts__icon" width="16" height="12">
+                        <svg class="header-contacts__icon">
                             <use href="./images/icons/symbol-defs.svg#envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -33,13 +34,17 @@
                 </li>
                 <li class="header-contacts__item">
                     <a class="header-contacts__link" href="tel:+380961111111">
-                        <svg class="header-contacts__icon" width="10" height="16">
+                        <svg class="header-contacts__icon">
                             <use href="./images/icons/symbol-defs.svg#smartphone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
                 </li>
             </ul>
+            <svg class="header__menu-button" width="40" height="40">
+                <use href="./images/icons/symbol-defs.svg#menu">
+                </use>
+            </svg>
         </div>
     </header>
     
