--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <ul class="header-contacts">
                <li class="header-contacts__item">
                    <a class="header-contacts__link" href="mailto:info@devstudio.com">             
-                       <svg class="header-contacts__icon" width="16" height="12">
+                       <svg class="header-contacts__icon">
                            <use href="./images/icons/symbol-defs.svg#envelope" ></use>
                        </svg>
                      info@devstudio.com
@@ -32,13 +32,17 @@
                 </li>
                <li class="header-contacts__item">
                    <a class="header-contacts__link" href="tel:+380961111111">
-                       <svg class="header-contacts__icon" width="10" height="16">
+                       <svg class="header-contacts__icon">
                            <use href="./images/icons/symbol-defs.svg#smartphone"></use>
                        </svg>
                        +38 096 111 11 11
                     </a>
                 </li>
            </ul>
+           <svg class="header__menu-button" width="40" height="40">
+                <use href="./images/icons/symbol-defs.svg#menu">
+                </use>
+           </svg>           
         </div> 
     </header>
 
