--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,9 @@
                 <ul class="grid">
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/web-side.jpg" alt="Веб-сайт"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/web-side1x.jpg 1x, ./images/portfolio/web-side2x.jpg 2x"
+                            src="./images/portfolio/web-side.jpg" alt="Веб-сайт"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -81,7 +83,9 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/basketball.jpg" alt="Баскетбол"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/basketball1x.jpg 1x, ./images/portfolio/basketball2x.jpg 2x"
+                            src="./images/portfolio/basketball.jpg" alt="Баскетбол"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -95,7 +99,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/logo-the-seafood.jpg" alt="Постер ресторана" />
+                            <img class="grid__img"
+                            srcset="./images/portfolio/logo-the-seafood1x.jpg 1x, ./images/portfolio/logo-the-seafood2x.jpg 2x"
+                            src="./images/portfolio/logo-the-seafood.jpg" 
+                            alt="Постер ресторана" />
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -109,7 +116,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/headphones.jpg" alt="Наушники"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/headphones1x.jpg 1x, ./images/portfolio/headphones2x.jpg 2x"
+                            src="./images/portfolio/headphones.jpg"
+                            alt="Наушники"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -123,7 +133,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/boxes.jpg" alt="Коробочки"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/boxes1x.jpg 1x, ./images/portfolio/boxes2x.jpg 2x"
+                            src="./images/portfolio/boxes.jpg"
+                            alt="Коробочки"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -137,7 +150,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/monitor.jpg" alt="Монитор"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/monitor1x.jpg 1x, ./images/portfolio/monitor2x.jpg 2x"
+                            src="./images/portfolio/monitor.jpg"
+                            alt="Монитор"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -151,7 +167,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/magazine.jpg" alt="Журнал"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/magazine1x.jpg 1x, ./images/portfolio/magazine2x.jpg 2x"
+                            src="./images/portfolio/magazine.jpg"
+                            alt="Журнал"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -165,7 +184,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/lab.jpg" alt="Название проекта LAB"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/lab1x.jpg 1x, ./images/portfolio/lab2x.jpg 2x"
+                            src="./images/portfolio/lab.jpg"
+                            alt="Название проекта LAB"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -179,7 +201,10 @@
 
                     <li class="grid__card">
                         <div class="grid__thumb">
-                            <img class="grid__img" src="./images/portfolio/laptop.jpg" alt="Ноутбук"/>
+                            <img class="grid__img"
+                            srcset="./images/portfolio/laptop1x.jpg 1x, ./images/portfolio/laptop2x.jpg 2x"
+                            src="./images/portfolio/laptop.jpg"
+                            alt="Ноутбук"/>
                             <div class="grid__overlay">
                                 <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
