--- a/index.html
+++ b/index.html
@@ -114,19 +114,27 @@
                 <ul class="case__cards">
                     <li class="case__item">
                         <div class="case__thumb">
-                            <img class="case__img" src="./images/main/programming.jpg" alt="Десктопное приложение">
+                            <img class="case__img"
+                            srcset="./images/main/programming1x.jpg 1x, ./images/main/programming2x.jpg 2x"
+                            src="./images/main/programming.jpg"
+                            alt="Десктопное приложение">
                             <p class="case__inscription">Десктопные приложения</p>
                         </div>                        
                     </li>
                     <li class="case__item">
                         <div class="case__thumb">
-                            <img class="case__img" src="./images/main/synchronization.jpg" alt="Мобильное приложение">
+                            <img class="case__img"
+                            srcset="./images/main/synchronization1x.jpg 1x, ./images/main/synchronization2x.jpg 2x"
+                            src="./images/main/synchronization.jpg"
+                            alt="Мобильное приложение">
                             <p class="case__inscription">Мобильные приложения</p>
                         </div>                        
                     </li>
                     <li class="case__item">
                         <div class="case__thumb">
-                            <img class="case__img" src="./images/main/design.jpg" alt="Дизайнерские решения">
+                            <img class="case__img"
+                            srcset="./images/main/design1x.jpg 1x, ./images/main/design2x.jpg 2x"
+                            src="./images/main/design.jpg"        alt="Дизайнерские решения">
                             <p class="case__inscription">Дизайнерские решения</p> 
                         </div>
                     </li>                                               
@@ -141,7 +149,10 @@
                 <ul class="team__cards">
                     <li class="team__item">
                         <div class="team__thumb">
-                            <img class="team__img" src="./images/main/igor.jpg" alt="Фото Игоря">
+                            <img class="team__img"
+                            srcset="./images/main/igor1x.jpg 1x, ./images/main/igor2x.jpg 2x"
+                            src="./images/main/igor.jpg"
+                            alt="Фото Игоря">
                         </div>                        
                         <div class="team__desc">
                             <h3 class="team__name">Игорь Демьяненко</h3>
@@ -184,7 +195,10 @@
                     </li>
                     <li class="team__item">
                         <div class="team__thumb">
-                            <img class="team__img" src="./images/main/olga.jpg" alt="Фото Ольги">
+                            <img class="team__img"
+                            srcset="./images/main/olga1x.jpg 1x, ./images/main/olga2x.jpg 2x"
+                            src="./images/main/olga.jpg"
+                            alt="Фото Ольги">
                         </div>                        
                         <div class="team__desc">
                             <h3 class="team__name">Ольга Репина</h3>
@@ -227,7 +241,10 @@
                     </li>
                     <li class="team__item">
                         <div class="team__thumb">
-                            <img class="team__img" src="./images/main/nikolai.jpg" alt="Фото Николая">
+                            <img class="team__img"
+                            srcset="./images/main/nikolai1x.jpg 1x, ./images/main/nikolai2x.jpg 2x"
+                            src="./images/main/nikolai.jpg"
+                            alt="Фото Николая">
                         </div>                        
                         <div class="team__desc">
                             <h3 class="team__name">Николай Тарасов</h3>
@@ -270,7 +287,10 @@
                     </li>
                     <li class="team__item">
                         <div class="team__thumb">
-                            <img class="team__img" src="./images/main/michail.jpg" alt="Фото Михаила">
+                            <img class="team__img"
+                            srcset="./images/main/michail1x.jpg 1x, ./images/main/michail2x.jpg 2x"
+                            src="./images/main/michail.jpg"
+                            alt="Фото Михаила">
                         </div>                        
                         <div class="team__desc">
                             <h3 class="team__name">Михаил Ермаков</h3>
