--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
            </ul>
-           <button class="header__menu-button">
+           <button class="header__menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                 <svg width="40" height="40">
                     <use href="./images/icons/symbol-defs.svg#menu">
                     </use>
@@ -508,7 +508,39 @@
                        
         </div>        
     </div>
+
+    <div class="mobile js-menu-container" id="mobile-menu">
+        <button class="mobile-menu__button js-close-menu">
+            <svg width="18" height="18">
+                <use href="./images/icons/symbol-defs.svg#close"></use>
+            </svg>
+        </button>
+        <ul class="mobile-menu">
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="./index.html">Студия</a>
+            </li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
+        </ul>
+        <ul class="mobile-contacts">
+            <li class="mobile__tel">
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            <li class="mobile__mail">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>            
+        </ul>
+        <ul class="mobile__socials">
+            <li class="mobile__link"><a href="#">Instagram</a></li>
+            <li class="mobile__link"><a href="#">Twitter</a></li>
+            <li class="mobile__link"><a href="#">Facebook</a></li>
+            <li class="mobile__link"><a href="#">Linkedin</a></li>
+        </ul>
+    </div>
     
     <script src="./js/modal.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
