--- a/index.html
+++ b/index.html
@@ -522,18 +522,18 @@
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
         </ul>
         <ul class="mobile-contacts">
-            <li class="mobile__tel">
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="mobile-contacts__item">
+                <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
-            <li class="mobile__mail">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="mobile-contacts__item">
+                <a class="mobile__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>            
         </ul>
         <ul class="mobile__socials">
-            <li class="mobile__link"><a href="#">Instagram</a></li>
-            <li class="mobile__link"><a href="#">Twitter</a></li>
-            <li class="mobile__link"><a href="#">Facebook</a></li>
-            <li class="mobile__link"><a href="#">Linkedin</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Instagram</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Twitter</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
         </ul>
     </div>
     
