--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <ul class="header-contacts">
                <li class="header-contacts__item">
                    <a class="header-contacts__link" href="mailto:info@devstudio.com">             
-                       <svg class="header-contacts__icon">
+                       <svg class="header-contacts__mail">
                            <use href="./images/icons/symbol-defs.svg#envelope" ></use>
                        </svg>
                      info@devstudio.com
@@ -32,7 +32,7 @@
                 </li>
                <li class="header-contacts__item">
                    <a class="header-contacts__link" href="tel:+380961111111">
-                       <svg class="header-contacts__icon">
+                       <svg class="header-contacts__tel">
                            <use href="./images/icons/symbol-defs.svg#smartphone"></use>
                        </svg>
                        +38 096 111 11 11
