--- a/index.html
+++ b/index.html
@@ -515,12 +515,14 @@
                 <use href="./images/icons/symbol-defs.svg#close"></use>
             </svg>
         </button>
+        <div class="mobile-menu__container">
         <ul class="mobile-menu">
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="./index.html">Студия</a>
             </li>
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
         </ul>
+        <div class="test">
         <ul class="mobile-contacts">
             <li class="mobile-contacts__item">
                 <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -535,6 +537,8 @@
             <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
             <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
         </ul>
+        </div>
+        </div>
     </div>
     
     <script src="./js/modal.js"></script>
