--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
             <nav class="navigation">
                 <a class="logo" href="./index.html">Web<span class="logo__studio">Studio</span></a>
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a class="navigation__link"
+                    <li class="navigation__item"><a class="navigation__link navigation__link"
                             href="./index.html">Студия</a></li>
-                    <li class="navigation__item"><a class="navigation__link navigation__link--current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="navigation__item"><a class="navigation__link--current" href="./portfolio.html">Портфолио</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
                     </a>
                 </li>
             </ul>
-            <button class="header__menu-button">
+            <button class="header__menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
                 <svg width="40" height="40">
                     <use href="./images/icons/symbol-defs.svg#menu">
                     </use>
@@ -287,5 +287,36 @@
             </form>
         </div>
     </footer>
+    <div class="mobile js-menu-container" id="mobile-menu">
+        <button class="mobile-menu__button js-close-menu">
+            <svg width="18" height="18">
+                <use href="./images/icons/symbol-defs.svg#close"></use>
+            </svg>
+        </button>
+        <ul class="mobile-menu">
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="./index.html">Студия</a>
+            </li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
+        </ul>
+        <ul class="mobile-contacts">
+            <li class="mobile-contacts__item">
+                <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            <li class="mobile-contacts__item">
+                <a class="mobile__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+        </ul>
+        <ul class="mobile__socials">
+            <li class="mobile__item"><a class="mobile__link" href="#">Instagram</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Twitter</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
+            <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
+        </ul>
+    </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
