--- a/index.html
+++ b/index.html
@@ -464,37 +464,39 @@
            
             <form name="signup-form">
                 <p class="signup-form__title">Оставьте свои данные, мы вам перезвоним</p>
-                <label class="signup-form__label" for="username">
-                    <span>Имя</span>
+                <div class="signup-form__container">
+                    <label class="signup-form__label" for="username">Имя</label>
                     <div class="data-input">
                         <input class="data-input__place" type="text" name="username" id="username" />
                         <svg class="data-input__icon" width="18" height="18">
                             <use href="./images/icons/symbol-defs.svg#person"></use>
                         </svg>
                     </div>
-                </label>
-                <label class="signup-form__label">
-                    <span>Телефон</span>
+                </div>                                
+                <div class="signup-form__container">
+                    <label class="signup-form__label" for="usertel">Телефон</label>
                     <div class="data-input">
-                        <input class="data-input__place" type="tel" name="phone-number" />
+                        <input class="data-input__place" type="tel" name="phone-number" id="usertel" />
                         <svg class="data-input__icon" width="18" height="18">
                             <use href="./images/icons/symbol-defs.svg#phone"></use>
                         </svg>
-                    </div>                    
-                </label>
-                <label class="signup-form__label">
-                    <span>Почта</span>
+                    </div>
+                </div>                               
+                <div class="signup-form__container">
+                    <label class="signup-form__label" for="useremail">Почта</label>
                     <div class="data-input">
-                        <input class="data-input__place" type="email" name="email" />
+                        <input class="data-input__place" type="email" name="email" id="useremail" />
                         <svg class="data-input__icon" width="18" height="18">
                             <use href="./images/icons/symbol-defs.svg#email"></use>
                         </svg>
-                    </div>                    
-                </label>
-                <label class="signup-form__label">
-                    <span>Комментарий</span>
-                    <textarea class="signup-form__textarea" name="comments" rows="4" placeholder="Введите текст"></textarea>
-                </label>
+                    </div>
+                </div>                
+                <div class="signup-form__container">
+                    <label class="signup-form__label">
+                        <span>Комментарий</span>
+                        <textarea class="signup-form__textarea" name="comments" rows="4" placeholder="Введите текст"></textarea>
+                    </label>
+                </div>                
                 <label class="conditions">
                     <input class="condition__checkbox visually-hidden" type="checkbox" name="conditions" />
                     <svg class="condition__icon" width="16" height="15">
@@ -522,7 +524,6 @@
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
         </ul>
-        <div class="test">
         <ul class="mobile-contacts">
             <li class="mobile-contacts__item">
                 <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -536,8 +537,7 @@
             <li class="mobile__item"><a class="mobile__link" href="#">Twitter</a></li>
             <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
             <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
-        </ul>
-        </div>
+        </ul>        
         </div>
     </div>
     
