--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
             <nav class="navigation">
                 <a class="logo" href="./index.html">Web<span class="logo__studio">Studio</span></a>
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a class="navigation__link navigation__link"
+                    <li class="navigation__item"><a class="navigation__link"
                             href="./index.html">Студия</a></li>
-                    <li class="navigation__item"><a class="navigation__link--current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="navigation__item"><a class="navigation__link navigation__link--current" href="./portfolio.html">Портфолио</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
                 </ul>
             </nav>
