--- a/index.html
+++ b/index.html
@@ -517,28 +517,28 @@
                 <use href="./images/icons/symbol-defs.svg#close"></use>
             </svg>
         </button>
-        <div class="mobile-menu__container">
         <ul class="mobile-menu">
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="./index.html">Студия</a>
             </li>
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
             <li class="mobile-menu__item"><a class="mobile-menu__link" href="#">Контакты</a></li>
         </ul>
-        <ul class="mobile-contacts">
-            <li class="mobile-contacts__item">
-                <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-            <li class="mobile-contacts__item">
-                <a class="mobile__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>            
-        </ul>
-        <ul class="mobile__socials">
-            <li class="mobile__item"><a class="mobile__link" href="#">Instagram</a></li>
-            <li class="mobile__item"><a class="mobile__link" href="#">Twitter</a></li>
-            <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
-            <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
-        </ul>        
-        </div>
+        <div class="mobile__container">
+            <ul class="mobile-contacts">
+                <li class="mobile-contacts__item">
+                    <a class="mobile__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                <li class="mobile-contacts__item">
+                    <a class="mobile__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+            </ul>
+            <ul class="mobile__socials">
+                <li class="mobile__item"><a class="mobile__link" href="#">Instagram</a></li>
+                <li class="mobile__item"><a class="mobile__link" href="#">Twitter</a></li>
+                <li class="mobile__item"><a class="mobile__link" href="#">Facebook</a></li>
+                <li class="mobile__item"><a class="mobile__link" href="#">Linkedin</a></li>
+            </ul>
+        </div>        
     </div>
     
     <script src="./js/modal.js"></script>
